--- a/Project/cxview&programmer(NodeJs+WS)/public/css/alarmInfo.css
+++ b/Project/cxview&programmer(NodeJs+WS)/public/css/alarmInfo.css
@@ -21,7 +21,7 @@
 
 #alarmTable table{
     position: relative;
-    height: 100%;
+    height: 10px;
     width: 100%;
     /* border: 1px solid #11bce7; */
     text-align:center;
@@ -32,6 +32,7 @@
 }
 #alarmTable th{
     border-radius: 3px;
+    font-weight: light;
 }
 .button{
     border-radius: 3px;
